# fdo

./: .travis.yml  BUILD_400.1.Mi.xml  CMakeLists.txt  CMake__README.txt  License_README.txt  Makefile.am  OpenSourceBuild__README.txt  OpenSourceDocs__README.txt  OpenSourceTestData__README.txt  README.md  appveyor.yml  build.bat  build_linux.sh  build_parse.bat  build_parse.sh  build_thirdparty.bat  build_thirdparty.sh  checkoutsvn.bat  checkoutsvn.sh  cmake_bootstrap.sh  cmake_build.sh  configure  configure.in  createtarzipbinfiles.bat  createtarzipbinfiles2.bat  createtarzipfiles.bat  createtarzipfiles.sh  methods.vbs  pack.bat  package_thirdparty.bat  packchanges.bat  packchanges.wsf  preparebuilds.wsf  providers.cmake.linux.xml  providers.windows.template.xml  providers.xml  runtestbuild.bat  runtestbuild.sh  setenvironment.bat  setenvironment.sh  (+1 more)
Fdo/Docs/: Makefile.am
Fdo/Docs/XmlSchema/: FdoBase.xsd  FdoOverride.xsd  Makefile.am
Fdo/Docs/doc_src/: Doxyfile_FDOmanaged  Doxyfile_FDOmanaged_CHM  Doxyfile_FDOunmanaged  Doxyfile_FDOunmanaged_CHM  Makefile.am
Fdo/Managed/: Makefile.am
Fdo/Managed/Project/: MgCommon.vcproj  MgCommon.vcxproj  MgCommon.vcxproj.filters  MgFDO.vcproj  MgFDO.vcxproj  MgFDO.vcxproj.filters  MgGeometry.vcproj  MgGeometry.vcxproj  MgGeometry.vcxproj.filters  MgSpatial.vcproj  MgSpatial.vcxproj  MgSpatial.vcxproj.filters
Fdo/Managed/Src/: CommonNamespace.h  CommonUtilities.h
Fdo/Managed/UnitTest/: Common.cs  EntryPoint.cs  UnitTest.csproj  UnitTest.sln  mgCommonTest.cs  mgCounter.cs  mgExpressionParseTest.cs  mgExpressionTest.cs  mgExtractor.cs  mgFilterParseTest.cs  mgGeometryTest.cs  mgGmlTest.cs  mgIoTest.cs  mgSchemaTest.cs  mgSpatialContextTest.cs  mgSpatialUtilityTest.cs  mgStringStream.cs
Fdo/UnitTest/: CMakeLists.txt  ClientServicesTest.h  CommandTest.cpp  CommandTest.h  CommonTest.cpp  ExpressionParseTest.cpp  ExpressionParseTest.h  ExpressionTest.cpp  ExpressionTest.h  FilterParseTest.cpp  FilterParseTest.h  FilterTest.cpp  GeometryMemPerfTest.cpp  GeometryTest.cpp  GmlTest.cpp  GmlTest.h  GmlWriteTest.cpp  GmlWriteTest.h  IoTest.cpp  IoTest.h  Makefile.am  Pch.h  SchemaTest.cpp  SpatialContextTest.cpp  SpatialUtilityTest.cpp  SpatialUtilityTest.h  TestProcessor.cpp  UnitTest.vcproj  UnitTest.vcxproj  UnitTestUtil.cpp  XmlFormatter.cpp  XmlTest.cpp  gml3_write_master.txt  gml_blob_hex_schema.xml  gml_nested_collection.xml  gml_nested_geometry_schema.xml  gml_nested_object.xml  gml_simple_object_schema.xml  gml_write_master.txt  hawaii_in.xml  (+18 more)
Providers/ArcSDE/: Makefile.am  build.bat  build_linux.sh  configure  configure.in
Providers/ArcSDE/Docs/: Makefile.am
Providers/ArcSDE/Inc/: Makefile.am
Providers/ArcSDE/Src/: ArcSDE.sln  ArcSDEOS.sln  ArcSDE_vs10.sln  Makefile.am
Providers/ArcSDE/TestData/: SetupTestData.perl  TestGeoDB.mdb
Providers/GDAL/: CMakeLists.txt  Makefile.am  aclocal.m4  build.bat  build_linux.sh  config.status  configure  configure.in  libtool
Providers/GDAL/Docs/: Makefile.am
Providers/GDAL/Inc/: CMakeLists.txt  GRFPMessage.h  Makefile.am
Providers/GDAL/Src/: FdoRfpDefines.h  FdoRfpGlobals.h  FdoRfpUtil.h  Makefile.am  RFP.sln  RFP_vs12.sln
Providers/GDAL/testwrk/: ConnectTests.cpp  GNUmakefile  RfpConfigExample.xml  fdorastutil.cpp  providers.xml  rtest.cpp
Providers/GenericRdbms/: CMakeLists.txt  Makefile.am  build_linux.sh  configure  configure.in  preparebuilds.wsf
Providers/GenericRdbms/Docs/: CMakeLists.txt  Makefile.am
Providers/GenericRdbms/Inc/: CMakeLists.txt  Makefile.am  rdbi.h
Providers/GenericRdbms/Nls/: CMakeLists.txt  Makefile.am  fdordbms.vcproj  fdordbms.vcxproj  fdordbmsmsg.mc  fdordbmsmsgStatic.rc
Providers/GenericRdbms/Src/: CMakeLists.txt  Makefile.am
Providers/GenericRdbms/com/: CMakeLists.txt  ExtendedCoordSys.txt  Makefile.am  fdo_sys.sql  postgis_fdo_sys.sql
Providers/OGR/: CMakeLists.txt  Makefile.am  OGRProvider.rc  OGRProvider.sln  OGRProvider.vcproj  OGRProvider.vcxproj  OGRProvider_vs12.sln  OgrFdoUtil.cpp  OgrFdoUtil.h  OgrProvider.cpp  OgrProvider.h  ProjConverter.cpp  ProjConverter.h  README.txt  build.bat  build_linux.sh  compile.sh  configure  configure.in  libtool  stdafx.h
Providers/OGR/Src/: CMakeLists.txt  OGRProvider_vs15.sln
Providers/OGR/TestData/: UTF8Test.vrt  poly_sql.vrt
Providers/PostGIS/: CMakeLists.txt  build.bat  build_linux.sh  configure  configure.in  svnignore
Providers/PostGIS/Doc/: README.txt  doxygen.conf
Providers/PostGIS/Inc/: CMakeLists.txt
Providers/PostGIS/Src/: CMakeLists.txt  Makefile.am  PostGis.sln  PostGis.vsprops  README.txt  TODO.txt  build.bat  clean.bat  providers.xml
Providers/SDF/: CMakeLists.txt  Makefile.am  SDF.spec  build.bat  build_linux.sh  configure  configure.in  methods.vbs
Providers/SDF/Inc/: CMakeLists.txt  Makefile.am
Providers/SDF/Src/: CMakeLists.txt  Makefile.am  SDFOS.sln  SDFOS_vs12.sln  SDFOS_vs15.sln
Providers/SDF/TestData/: OptimizerTest.sdf  PARCEL_linuxtest.SDX.REMOVED.git-id  province.sdf
Providers/SHP/: CMakeLists.txt  Makefile.am  build.bat  build_linux.sh  configure  configure.in  setenvironment.bat
Providers/SHP/Docs/: Makefile.am
Providers/SHP/Inc/: CMakeLists.txt  (+1 more)
Providers/WFS/: CMakeLists.txt  Makefile.am  build.bat  build_linux.sh  configure  configure.in
Providers/WMS/: CMakeLists.txt  Makefile.am  build.bat  build_linux.sh  configure  configure.in  methods.vbs  preparebuilds.wsf
Utilities/Common/: CMakeLists.txt  FdoCommon.sln  FdoCommon.vcproj  FdoCommon.vcxproj  FdoCommon.vcxproj.filters  FdoCommon_vs15.sln  Makefile.am
Utilities/OWS/: CMakeLists.txt  FdoOws.rc  Makefile.am  OWS.vcproj  OWS.vcxproj  stdafx.h
Utilities/SQLiteInterface/: Makefile.am  ReadMe.txt  SQLiteBTree.cpp  SQLiteBTree.h  SQLiteCursor.cpp  SQLiteDataBase.cpp  SQLiteDataBase.h  SQLiteInterface.vcproj  SQLiteInterface.vcxproj  SQLiteMemoryDataBase.cpp  SQLiteSqlUpdateCache.cpp  SQLiteSqlUpdateCache.h  SQLiteTable.cpp  SQLiteTable.h
Utilities/TestCommon/: CMakeLists.txt  Makefile.am  TestCommon.sln  TestCommon.vcproj  TestCommon.vcxproj  TestCommon.vcxproj.filters
(+45025 files in other folders)
