AUTOMAKE_OPTIONS = foreign

SUBDIRS = Thirdparty Fdo Utilities Providers

DIST_SUBDIRS = Thirdparty Fdo Utilities Providers

EXTRA_DIST = \
    build.bat \
    build_linux.sh \
    build_parse.sh \
    build_parse.bat \
    build_thirdparty.bat \
    build_thirdparty.sh \
    OpenSourceDocs__README.txt \
    OpenSourceBuild__README.txt \
    License_README.txt \
    providers.windows.template.xml \
    providers.xml \
    checkoutsvn.bat \
    checkoutsvn.sh \
    createtarzipfiles.bat \
    createtarzipfiles.sh \
    setenvironment.sh \
    setenvironment.bat \
    packchanges.bat \
    packchanges.wsf \
    methods.vbs \
    preparebuilds.wsf

xmldir = $(libdir)
xml_DATA = providers.xml
