dnl Configure.in for OSGeo FDO Core (Fdo, Utilities, Thirdparty)
#----------------------------------------------------------------------
# Variables
# Following are the makefile directories 
#----------------------------------------------------------------------
AC_INIT(FDO,3.2,https://fdocore.osgeo.org)
AC_CONFIG_SRCDIR(configure.in)
AM_INIT_AUTOMAKE

AC_PREFIX_DEFAULT(/usr/local/fdo-3.2.0)

AC_LANG_C
AC_PROG_CC
AC_LANG_CPLUSPLUS
AC_PROG_CXX
AC_PROG_YACC
AC_DISABLE_STATIC
AM_PROG_LIBTOOL

AC_SUBST(VERSION, "3.2.0")

# Check for Debug or Release build settings
AC_ARG_ENABLE([debug],
               MAP_HELP_STRING([--enable-debug],
              	             [enable debug build [[default=no]]]),
	      	             [enable_debug=$enableval],
	      	             [enable_debug=no])

if test $enable_debug = yes; then
 AC_MSG_NOTICE([Using debug configuration])
 CXXFLAGS="-g -MMD -MT "
 AC_SUBST(CXXFLAGS, ["-g -MMD -MT "])
 CXXFLAGS_SDF="-g "
 AC_SUBST(CXXFLAGS_SDF, ["-g "])
else
 AC_MSG_NOTICE([Using optimized configuration])
 CXXFLAGS="-MMD -MT "
 AC_SUBST(CXXFLAGS, ["-MMD -MT "])
 CXXFLAGS_SDF=""
 AC_SUBST(CXXFLAGS_SDF, [""])
fi

##output Makefiles##
AC_CONFIG_FILES(Makefile)
AC_CONFIG_FILES(Fdo/Makefile)
AC_CONFIG_FILES(Utilities/Makefile)
AC_CONFIG_FILES(Thirdparty/Makefile)

#############################################
## Fdo
#############################################
#Unmanaged: Src Inc
#Src: McToMsf Message FileToHdr Nls Common Geometry Spatial Fdo
AC_CONFIG_FILES([Fdo/Unmanaged/Makefile \
                 Fdo/Unmanaged/Src/Makefile \
                 Fdo/Unmanaged/Src/McToMsf/Makefile \
                 Fdo/Unmanaged/Src/Message/Makefile \
                 Fdo/Unmanaged/Src/FileToHdr/Makefile \
                 Fdo/Unmanaged/Src/Nls/Makefile \
                 Fdo/Unmanaged/Src/Common/Makefile \
                 Fdo/Unmanaged/Src/Geometry/Makefile \
                 Fdo/Unmanaged/Src/Spatial/Makefile \
                 Fdo/Unmanaged/Src/Fdo/Makefile \
                 Fdo/Unmanaged/Inc/Makefile])

#fdo: Install
AC_CONFIG_FILES([Fdo/Install/Makefile \
                 Fdo/Install/XsdInstallPaths/Makefile])

#fdo: Docs
AC_CONFIG_FILES(Fdo/Docs/Makefile)

#fdo: UnitTest
AC_CONFIG_FILES(Fdo/UnitTest/Makefile)

#############################################
## Utilities
#############################################
#FdoCommon
AC_CONFIG_FILES([Utilities/Common/Makefile])

#SQLiteInterface
AC_CONFIG_FILES([Utilities/SQLiteInterface/Makefile])

#OWS
AC_CONFIG_FILES([Utilities/OWS/Makefile \
                 Utilities/OWS/Src/Makefile])

#SchemaMgr
AC_CONFIG_FILES([Utilities/SchemaMgr/Makefile \
                 Utilities/SchemaMgr/Nls/Makefile \
                 Utilities/SchemaMgr/Inc/Makefile \
                 Utilities/SchemaMgr/Src/Makefile \
                 Utilities/SchemaMgr/Src/Sm/Makefile \
                 Utilities/SchemaMgr/Src/Sm/Lp/Makefile \
                 Utilities/SchemaMgr/Src/Sm/Ov/Makefile \
                 Utilities/SchemaMgr/Src/Sm/Ph/Makefile \
                 Utilities/SchemaMgr/Src/Sm/Ph/Cfg/Makefile \
                 Utilities/SchemaMgr/Src/Sm/Ph/Mt/Makefile \
                 Utilities/SchemaMgr/Src/Sm/Ph/Rb/Makefile \
                 Utilities/SchemaMgr/Src/Sm/Ph/Rd/Makefile])


AC_OUTPUT

